--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   "devDependencies": {
     "gh-pages": "^1.1.0",
     "node-sass": "^4.8.3",
-    "parcel-bundler": "^1.8.2"
+    "parcel-bundler": "1.7.1"
   }
 }
